--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,19 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Lato', sans-serif;
+  color: rgb(136, 136, 136);
 }
+
+.hg-3 {
+  padding: 15px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+/***************************
+  GRID LAYOUT
+***************************/
 
 .grid-container {
   display: grid;
@@ -16,10 +28,34 @@ body {
   'header'
   'nav'
   'main';
-
-
 }
 
+.header {
+  grid-area: header;
+
+  color: #fff;
+  width: 100%;
+  background-color: rgb(96, 97, 177);
+}
+
+.nav {
+  grid-area: nav;
+
+  color: #fff;
+  background-color: rgb(60, 58, 95);
+  width: 100%;
+}
+
+.main {
+  grid-area: main;
+  display: grid;
+  width: 100%;
+  height: 300px;
+}
+
+.widget-container-full, .widget-container-half {
+  width: 95vw;
+}
 
 /***************************
   HEADER
@@ -31,16 +67,14 @@ body {
   background-color: rgb(96, 97, 177);
 
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  margin: auto;
-
+  padding: 12px;
 }
 
 .header > h1 {
   flex-grow: 2;
-  padding-left: 25px;
-  padding-bottom: 2px;
+  margin-top: 10px;
 }
 
 .header > h1 span {
@@ -48,20 +82,17 @@ body {
 }
 
 .header > h1 sup {
-  font-size: 14px;
+  font-size: 0.4em;
   font-weight: 300;
 }
 
 .header-bell-icon {
-  margin-right: 20px;
-  margin-top: -5px;
+  margin: 5px 20px 0;
   padding-top: 1px;
-
 }
 
 .header-bell-icon img {
-  height: 32px;
-  width: 32px;
+  height: 1.4em;
 }
 
 .vertical-line {
@@ -70,39 +101,570 @@ body {
   margin-right: 10px;
 }
 
-.header-image {
-  width: 45px;
-  height: 45px;
+.header-profile-image {
+  width: 3em;
   border-radius: 50%;
-  margin-right: 15px;
+  margin-right: 20px;
 }
 
 .header h3 {
-  font-size: 18px;
+  font-size: 1em;
+  font-weight: 400;
   padding: 5px 25px 5px 0;
 }
 
+/***************************
+  NAVIGATION
+***************************/
 
-
-nav {
+.nav {
   grid-area: nav;
-
+  display: flex;
   color: #fff;
-  background-color: rgb(96, 97, 177);
+  background-color: rgb(60, 58, 95);
 }
 
-main {
-  grid-area: main;
+.nav-list {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+}
 
+.nav-item {
+  padding: 15px 20px;
+  border-bottom: 5px solid transparent;
+  opacity: 0.7;
+}
+
+.nav img {
+  height: 35px;
+  width: 35px;
+}
+
+.nav-item:hover  {
+  opacity: 1;
+  border-bottom: 5px solid rgb(112, 192, 125);
+}
+
+/***************************
+  MAIN SECTION
+***************************/
+
+.main {
   display: grid;
 }
 
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+}
+
+.main-header-headline {
+  flex: 1;
+  font-size: 22px;
+  font-weight: 400;
+  text-align: left;
+  padding-left: 15px;
+}
+
+.main-header-search {
+  background-color: rgb(250, 250, 250);
+  flex: 3;
+  border-left: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border-radius: 0 0 0 5px;
+}
+
+.main-header-search > input[type=search] {
+  width: 70%;
+  max-width: 250px;
+  padding: 10px;
+  margin-right: 15px;
+
+  border: 1px solid lightgrey;
+  border-radius: 4px;
+  font-size: 16px;
+  float: right;
+}
+
+::placeholder {
+  color: lightgray;
+}
+
+/***************************
+  TRAFFIC
+***************************/
+
+.traffic-header {
+  display: flex;
+  align-items: center;
+}
+
+.traffic-nav {
+  flex-grow: 2;
+  text-align: right;
+  margin-right: 15px;
+  width: 100%;
+}
+
+.traffic-nav li {
+  display: inline-block;
+  padding: 5px 0;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.traffic-nav li {
+  text-decoration: none;
+  color: inherit;
+  padding: 8px 18px;
+  margin-right: 5px;
+}
+
+.traffic-nav li:hover, .traffic--nav li:active {
+  background-color: rgb(112, 192, 125);
+  color: #fff;
+  padding: 8px 18px;
+  border-radius: 25px;
+}
+
+/***************************
+  CHARTS
+***************************/
+
+.daily {
+  border-top: 1px solid lightgray;
+}
+
+.mobile {
+  border-top: 1px solid lightgray;
+}
+
+/***************************
+  SOCIAL
+***************************/
+
+.social {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  border-top: 1px solid lightgray;
+}
+
+.social h3 {
+  width: 100%;
+}
+
+.social-container {
+  display: flex;
+  width: 65%;
+  max-width: 340px;
+  border: 1px solid lightgray;
+  background-color: rgb(250, 250, 250);
+  border-radius: 5px;
+  margin: 0 auto 20px;
+}
+
+.social-container p:first-of-type {
+  color: rgb(96, 97, 177);
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 0;
+  letter-spacing: 1.3px;
+}
+
+.social-container p:last-of-type {
+  font-size: 40px;
+  margin-bottom: 0;
+  margin-top: -20px;
+  font-weight: 300;
+}
+
+.social-icon {
+  margin: 20px;
+  width: 75px;
+  height: 75px;
+  background-color: #7476bb;
+  border-radius: 50%;
+  fill: #fff;
+}
+
+.social-text {
+  display: flex;
+  justify-content: space-around;
+  align-items: left;
+  text-align: left;
+  flex-direction: column;
+  flex-grow: 2;
+}
+
+/***************************
+  MEMBERS
+***************************/
+
+.members, .activity, .message, .settings {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 100%;
+  border-top: 1px solid lightgray;
+}
+
+.members h3, .activity h3, .message h3, .settings h3 {
+  width: 100%;
+}
+
+.members-container, .activity-container {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;/
+  justify-content: space-between;
+  height: 70px;
+  position: relative;
+}
+
+.members-container::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  width: 90%;
+  right: 5%;
+  left: 4%;
+  border-bottom: 1px solid lightgray;
+}
+
+.members-container:first-of-type::after {
+  border-bottom: none;
+}
+
+.members-container p:last-child {
+  text-align: right;
+}
+
+.members-text a {
+  text-decoration: none;
+  color: rgb(96, 97, 177);
+  font-size: 14px;
+  margin-top: 5px;
+  margin-bottom:
+}
+
+/***************************
+  ACTIVITY
+***************************/
+
+.activity-container::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  width: 90%;
+  right: 4%;
+  left: 5%;
+  border-bottom: 1px solid lightgray;
+}
+
+.activity-container:first-of-type::after {
+  border-bottom: none;
+}
+
+.members-container img, .activity-container img {
+  width: 30px;
+  border-radius: 50%;
+  margin-left: 25px;
+  margin-top: 15px;
+  margin-right: 10px;
+}
+
+.members-container p, .activity-container p {
+  font-size: 14px;
+  margin-bottom: 3px;
+  margin-right: 30px;
+}
+
+.activity-container p  {
+  font-size: 14px;
+}
+
+.members-text, .activity-text {
+  flex-grow: 2;
+  margin-bottom: 10px;
+}
+
+.activity-container p:last-child {
+  margin-top: 5px;
+  text-align: left;
+}
+
+.arrow {
+  transform: scale(2.2);
+  padding-right: 5px;
+  padding-top: 15px;
+}
+
+.members-container:last-child, .activity-container:last-child {
+  border-bottom: none;
+}
+
+/***************************
+  MESSAGE
+***************************/
+
+.message-container {
+  width: 93%;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+.message, .settings {
+  width: 100%;
+  border-top: 1px solid lightgray;
+  margin-left: 0;
+  margin-bottom: 20px;
+  padding-bottom: 40px;
+}
+
+.widget-container {
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  margin: auto;
+}
+
+.form-field {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid lightgrey;
+  border-radius: 4px;
+  font-family: inherit;
+  font-size: 14px;
+  background-color: rgb(250, 250, 250);
+}
+
+.form-area {
+  display: block;
+  width: 100%;
+  margin-bottom: 15px;
+  border: 1px solid lightgrey;
+  border-radius: 4px;
+  font-family: inherit;
+  font-size: 15px;
+  background-color: rgb(250, 250, 250);
+  height: 130px;
+  padding: 5px;
+}
+
+.button-primary {
+  background-color: rgb(96, 97, 177);
+  color: #fff;
+  padding: 18px;
+  border-radius: 5px;
+
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
+  border: none;
+}
+
+/***************************
+  SETTINGS
+***************************/
+
+.settings-button {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 15px;
+}
+
+.settings-button > button  {
+  width: 40%;
+}
+
+.button-disabled {
+  background-color: rgb(163, 163, 163);
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
+  border: none;
+  border-radius: 5px;
+}
+
+.settings > select {
+  width: 90%;
+  margin: 0 auto 30px;
+  height: 40px;
+  color: lightgray;
+ }
+
+.notification {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.switch-light {
+  margin-bottom: 30px;
+
+}
+
+.switch-light-text {
+  margin-right: 15px;
+}
+
+.switch-light-span {
+  font-size: 14px;
+}
+
+/***************************
+  MEDIA QUERIES
+***************************/
+
 @media (min-width: 768px) {
+
   .grid-container {
-    grid-template-columns: 55px 1fr;
+    grid-template-columns: 75px 1fr;
     grid-template-areas:
     'header header'
-    'nav main'
     'nav main';
+  }
+
+  .main {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .traffic, .social {
+    grid-column: 1 / span 2;
+  }
+
+  .daily, .members, .message {
+    grid-column: 1 / span 1;
+  }
+
+  .mobile, .activity, .settings {
+    grid-column: 2 / span 1;
+  }
+
+  .widget-container-full {
+    width: 90vw;
+  }
+
+  .widget-container-half {
+    width: 45vw;
+  }
+
+  .nav-list {
+    flex-direction: column;
+  }
+
+  .nav {
+    grid-column: 1 / 2;
+    grid-row: 2 / -1;
+  }
+
+  .nav-item {
+    border-bottom: none;
+    border-left: 3px solid transparent;
+  }
+
+  .nav-item:hover  {
+    border-bottom: none;
+    border-left: 3px solid rgb(112, 192, 125);
+  }
+
+  .main-header {
+    grid-column: 1 / span 2;
+  }
+
+  .main-header-headline {
+    letter-spacing: 1.1px;
+  }
+
+  .main-header-search > input[type=search] {
+    width: 60%;
+    max-width: 350px;
+  }
+
+  .main-header-search {
+    background-color: rgb(250, 250, 250);
+    flex: 4;
+  }
+
+  .daily {
+    border-right: 1px solid lightgray;
+  }
+
+  .social {
+    flex-direction: row;
+  }
+
+  .social-container {
+    display: flex;
+    width: 35%;
+    max-width: 220px;
+    border: 1px solid lightgray;
+    background-color: rgb(250, 250, 250);
+    border-radius: 5px;
+    margin: 0 auto 20px;
+  }
+
+  .social-container p:first-of-type {
+    color: rgb(96, 97, 177);
+    font-weight: 600;
+    font-size: 17px;
+    margin-bottom: 0;
+    letter-spacing: 1.3px;
+  }
+
+  .social-container p:last-of-type {
+    font-size: 30px;
+    margin-bottom: 0;
+    margin-top: -20px;
+    font-weight: 300;
+  }
+
+  .members, .message {
+    border-right: 1px solid lightgrey;
+  }
+}
+
+@media (min-width: 1024px){
+
+  .social-container {
+    display: flex;
+    width: 65%;
+    max-width: 320px;
+    border: 1px solid lightgray;
+    background-color: rgb(250, 250, 250);
+    border-radius: 5px;
+    margin: 0 auto 20px;
+  }
+
+  .social-container p:first-of-type {
+    color: rgb(96, 97, 177);
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 0;
+    letter-spacing: 1.3px;
+  }
+
+  .social-container p:last-of-type {
+    font-size: 50px;
+    margin-bottom: 0;
+    margin-top: -20px;
+    font-weight: 300;
   }
 }
