--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Lato', sans-serif;
-  color: rgb(136, 136, 136);
 }
 
 .hg-3 {
@@ -116,7 +115,7 @@ body {
   font-size: 11px;
 
   background-color: #fff;
-  color: gray;
+  color: rgb(136, 136, 136);
   margin-right: 18px;
   margin-top: -18px;
   justify-content: space-between;
@@ -192,6 +191,7 @@ body {
 
 .main {
   display: grid;
+  color: rgb(136, 136, 136);
 }
 
 .main-header {
@@ -298,9 +298,16 @@ body {
 
 .traffic-nav li {
   text-decoration: none;
-  color: inherit;
+  color: rgb(136, 136, 136);
   padding: 8px 18px;
   margin-right: 5px;
+}
+
+.selected {
+  background-color: rgb(112, 192, 125);
+  color: #fff !important;
+  padding: 8px 18px;
+  border-radius: 25px;
 }
 
 .traffic-nav li:hover, .traffic--nav li:active {
@@ -641,11 +648,13 @@ body {
 
   .nav-list {
     flex-direction: column;
+    justify-content: flex-start;
   }
 
   .nav {
     grid-column: 1 / 2;
     grid-row: 2 / -1;
+    height: 1810px;
   }
 
   .nav-item {
