--- a/css/styles.css
+++ b/css/styles.css
@@ -80,12 +80,14 @@ body {
 .header-bell-icon {
   margin: 5px 20px 0;
   padding-top: 1px;
+  position: relative;
 }
 
 .header-bell-icon img {
   height: 1.4em;
   transition: transform .2s ease;
-  position: relative;
+
+
 }
 
 .header-bell-icon img:hover {
@@ -98,8 +100,8 @@ body {
   height: 11px;
   background-color: rgb(112, 192, 125);
   position: absolute;
-  top: 30px;
-  left: 1042px;
+  top: -13%;
+  left: 60%;
   border-radius: 50%;
   cursor: pointer;
 }
